[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
    "colorama>=0.4.4",
    "matplotlib==3.*",
    "numpy==1.*",
    "Pillow==8.*",
]
name = "image2ascii"
requires-python = ">=3.5"
authors = [
    {name = "Robert Huselius", email = "robert@huseli.us"},
]
description = "Fancy image to ASCII/ANSI converter"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dynamic = ["version"]
license = {file = "LICENSE"}

[project.optional-dependencies]
www = [
    "Flask==2.*",
    "requests==2.*",
    "uWSGI==2.*",
]

[project.scripts]
image2ascii = "image2ascii.cli:main"
image2ascii_testserver = "image2ascii.wsgi:testserver [www]"

[project.urls]
Repository = "https://github.com/Eboreg/image2ascii"

[tool.setuptools.dynamic]
version = {attr = "image2ascii.__version__"}

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 119
multi_line_output = 5
skip = [".venv", "build", "dist"]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
files = "."
ignore_missing_imports = true
exclude = "build"

[tool.pylint.main]
disable = [
    "broad-exception-caught",
    "consider-using-f-string",
    "import-outside-toplevel",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "redefined-builtin",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "unspecified-encoding",
]
ignore = [".venv"]
max-line-length = 119
