[metadata]
name = image2ascii
version = attr: image2ascii.__version__

[options]
packages = image2ascii
python_requires = >=3.5
install_requires =
    colorama
    matplotlib
    Pillow
include_package_data = true

[options.entry_points]
console_scripts =
    image2ascii = image2ascii.cli:main

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
    **/lib
ignore = W504,W601,F723,E731,E266,E741
max-line-length = 119
max-doc-length = 79

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 119
multi_line_output = 5
skip = .venv,build,dist

[mypy]
check_untyped_defs = True
show_error_codes = True
files = .
ignore_missing_imports = True
exclude = build
